--- a/app/views/browse/form.ejs
+++ b/app/views/browse/form.ejs
@@ -1,9 +1,6 @@
 <% include ../head %>
 
-<script src="/js/add_remove.js"></script>
-<script src="/js/form_fields.js"></script>
-<script src="/js/indicated_field.js"></script>
-<script src="/js/form_form.js"></script>
+<script src="/js/form.js"></script>
 <link  href="/css/form_workspace.css" rel="stylesheet">
 <script src="/js/lib/ck/ckeditor.js"></script>
 <script src="/js/lib/codemirror.js"></script>
