--- a/app/views/cms/form.ejs
+++ b/app/views/cms/form.ejs
@@ -2,21 +2,14 @@
 
 <script src="/js/util.js"></script>
 <script src="/js/form.js"></script>
-<link  href="/css/form_workspace.css" rel="stylesheet">
 <script src="/js/lib/ck/ckeditor.js"></script>
 <script src="/js/lib/codemirror.js"></script>
+<script src="/js/lib/jquery.fileupload.js"></script>
+<script src="/js/lib/jquery.iframe-transport.js"></script>
+
+<link  href="/css/form.css" rel="stylesheet">
+<link  href="/css/upload.css" rel="stylesheet">
 <link  href="/css/codemirror.css" rel="stylesheet">
-<style>
-    .big { font-size: 36px; }
-</style>
-
-            '/static/assets/js/fileupload/csrf.js',
-            '/static/assets/js/fileupload/jquery.ui.widget.js',
-            '/static/assets/js/fileupload/jquery.iframe-transport.js',
-            '/static/assets/js/fileupload/jquery.fileupload.js',
-            '/static/assets/js/fileupload/jquery.fileupload-ui.js',
-            '/static/assets/js/upload.js',
-
 
 
 <% include ../head1 %>
