--- a/app/public/css/form.css
+++ b/app/public/css/form.css
@@ -93,7 +93,8 @@
     width: 100%;
     min-height: 400px;
     margin-bottom:220px;
-    -webkit-box-shadow: 0 0 80px rgba(0,0,0,.2);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.2);
+    padding: 20px;
 }
 
 .item label {
