--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400);
 /* Style tweaks */
 html {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
@@ -12,10 +11,9 @@ body {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
- font-family: 'Source Code Pro', sans-serif;
+ font-family: sans-serif;
     font-size:14px;
     color:#777;
-    -webkit-font-smoothing: subpixel-antialiased;
 }
 
 input {
@@ -88,34 +86,11 @@ label {
 
 
 
+button {
 
-button, .btn {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
-	background-color:#ededed;
-	text-indent:0;
-	border:0;
-	display:inline-block;
-	color:#777777;
-	font-size:15px;
-	font-weight:bold;
-	font-style:normal;
-	text-decoration:none;
-	text-align:center;
-	text-shadow:1px 1px 0px #ffffff;
-    padding:6px;
 }
-button:hover, .btn:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
-	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
-	background-color:#dfdfdf;
-    text-decoration: none;
-}button:active, .btn:active {
-	position:relative;
-	top:1px;
+.progress { width: 100%; height: 40px; background-color: #999;}
+.progress .bar {
+    background-color: #222;
+    height: 100%;
 }
