remove "user" model, move stuff to auth... a little more browsing

--- a/app/views/auth/register.ejs
+++ b/app/views/auth/register.ejs
@@ -1,4 +1,6 @@
-<% var title = 'Authentication Example' %>
+<% var title = 'Register' %>
+<% include ../head %>
+<% include ../head1 %>
 
 <h1>Register</h1>
 
@@ -19,4 +21,6 @@
     <input type="submit" value="Register">
   </p>
 </form>
+
+<% include ../foot %>
 
