--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,8 +1,9 @@
-<% var title = 'DK' %>
+<% var title = 'home' %>
 <% include head %>
+<% include head1 %>
 
 <h1>Ho ho</h1>
 <% if (user) { %>
-<a href="/sites">sites</a>
+<a href="/cms">cms</a>
 <% } %>
 <% include foot %>
