--- a/app/views/cms/form.ejs
+++ b/app/views/cms/form.ejs
@@ -16,8 +16,8 @@
 <% include ../nav %>
 
 <div class="padded">
-    <button id="save">SAVE</button>
-    <button id="delete">DELETE</button>
+    <button id="save" class="btn">SAVE</button>
+    <button id="delete" class="btn">DELETE</button>
    <div id="workspace-root">
         <form method="post">
         <div id="workspace" class="group root"></div>
@@ -30,12 +30,16 @@ $(document).ready(function(){
     var form = new form_form( $("#workspace"), <%- JSON.stringify(form) %> );
     form.data = <%- JSON.stringify(object) %>;
     $("#save").click(function(){
-        console.log(form.data);
         $.ajax({
             data: { val: JSON.stringify(form.data) },
             method: 'post',
             success: function(o){
-                console.log(o);
+                if (o.name && o.name.indexOf("Error") != -1)
+                    form.error(o);
+                else
+                {
+                    form.update(o);
+                }
             },
             error: function(o){
                 console.error(o);
