--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -54,3 +54,16 @@ ul { list-style-type: none; }
     background-color: #222;
     height: 100%;
 }
+
+
+
+
+
+.hrow, .crow {
+    clear: both;
+}
+
+.hcol, .ccol {
+    float: left;
+    width: 300px;
+}
