--- a/app/views/cms/browse.ejs
+++ b/app/views/cms/browse.ejs
@@ -1,22 +1,32 @@
 <% include ../head %>
+
+<script src="/js/util.js"></script>
+<script src="/js/browse.js"></script>
+
 <% include ../head1 %>
 <% include ../nav %>
 
-<div class="list">
-    <% for (var i=0; i<browser.length; i++) { var b = browser[i]; %>
-        <%= b.name %><br>
-    <% } %>
-    <br>   <br>   <br>   <br>   <br>
-    <% for (var i=0; i<result.length; i++) { var r = result[i]; %>
-        <a href="/cms/update/<%= model%>/<%= r._id%>"><%=i%></a>
-        <% for (var j=0; j<browser.length; j++) { var b = browser[j]; %>
-        <%= r[b.name] %>
-        <% } %>
-    <br>
-    <% } %>
-    <a href='/cms/create/<%=model%>'>Create <%= model %></a><br>
+<div class="row">
+   <div id="browser">
+    </div>
+    <a href='/cms/create/<%=type%>'>Create <%= type %></a><br>
 </div>
 
+<script>
+$(document).ready(function(){
+    var browser = new browse_browse("<%= type %>", {});
+    $("#browser").append(browser.$el());
+});
+</script>
+
 <% include ../foot %>
+
+
+
+
+
+
+
+
 
 
