--- a/app/views/cms/browse.ejs
+++ b/app/views/cms/browse.ejs
@@ -6,7 +6,7 @@
 <% include ../head1 %>
 <% include ../nav %>
 
-<div class="row">
+<div class="padded">
    <div id="browser">
     </div>
     <a href='/cms/create/<%=type%>'>Create <%= type %></a><br>
