--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -28,6 +28,26 @@ ul {
     z-index: 100000;
 }
 
+.form-controls {
+    position: fixed;
+    top: 30px;
+        left: 0;
+    width: 100%;
+    height: 55px;
+    background-color: #fff;
+    color: #333;
+    border-bottom: 1px solid #ccc;
+    z-index: 100000;
+    padding:15px;
+}
+
+.heading {
+    font-size: 20px;
+}
+
+.form .form {
+    padding-top: 50px;
+}
 .options {
     padding: 6px 0 0 20px;
 }
