--- a/app/views/cms/form.ejs
+++ b/app/views/cms/form.ejs
@@ -2,10 +2,13 @@
 
 <script src="/js/util.js"></script>
 <script src="/js/form.js"></script>
+<script src="/js/browse.js"></script>
+
 <script src="/js/lib/ck/ckeditor.js"></script>
 <script src="/js/lib/codemirror.js"></script>
 <script src="/js/lib/jquery.fileupload.js"></script>
 <script src="/js/lib/jquery.iframe-transport.js"></script>
+<script src="/dist/js/bootstrap.min.js"></script>
 
 <link  href="/css/upload.css" rel="stylesheet">
 <link  href="/css/codemirror.css" rel="stylesheet">
