--- a/app/views/cms/dashboard.ejs
+++ b/app/views/cms/dashboard.ejs
@@ -2,7 +2,7 @@
 <% include ../head1 %>
 <% include ../nav %>
 
-<div class="list">
+<div class="padded">
 
 <% for(var p in models) { %>
 <a href='/cms/browse/<%=p%>'><%= p %></a><br>
