--- a/app/public/js/lib/ck/contents.css
+++ b/app/public/js/lib/ck/contents.css
@@ -6,8 +6,8 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 body
 {
 	/* Font */
-	font-family: sans-serif, Arial, Verdana, "Trebuchet MS";
-	font-size: 14px;
+	font-family: 'Helvetica Neue', sans-serif, Arial, Verdana, "Trebuchet MS";
+	font-size: 15px;
 
 	/* Text color */
 	color: #333;
@@ -20,7 +20,7 @@ body
 
 .cke_editable
 {
-	font-size: 14px;
+	font-size: 15px;
 	line-height: 1.6em;
 }
 
