--- a/app/views/cms/browse.ejs
+++ b/app/views/cms/browse.ejs
@@ -7,6 +7,7 @@
 <% include ../nav %>
 
 <div class="padded">
+    <h2><%=type%> </h2>
    <div id="browser">
     </div>
     <a href='/cms/create/<%= type %>'>Create <%= type %></a><br>
@@ -14,7 +15,7 @@
 
 <script>
 $(document).ready(function(){
-    var browser = new browse_browse("<%= type %>", {});
+    var browser = new browse_browse("<%= type %>");
     browser.add_listener('click', function(f, r){
         console.log(f,r)
         location.href = '/cms/update/<%= type %>/' + r._id;
