--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -215,6 +215,13 @@ button:disabled {
     font-weight: bold;
 }
 
+.title {
+    font-size: 11px;
+    text-transform: uppercase;
+    padding-right:4px;
+    font-weight: bold;
+}
+
 .time {
     font-size: 11px;
 }
@@ -240,12 +247,12 @@ button:disabled {
 }
 
 .layer .lens {
-    position:absolute;
+    position:fixed;
     width:100%;
     height:100%;
     top:0;
     left:0;
-    background-color: rgba(255,255,255,.7);
+    background-color: rgba(0,0,0,.7);
 }
 
 .c {
