initial filters + misc

--- a/app/views/cms/browse.ejs
+++ b/app/views/cms/browse.ejs
@@ -7,10 +7,8 @@
 <% include ../nav %>
 
 <div class="padded">
-    <h2><%=type%> </h2>
-   <div id="browser">
-    </div>
-    <a href='/cms/create/<%= type %>'>Create <%= type %></a><br>
+   <div id="browser"></div>
+   <a href='/cms/create/<%= type %>'>Create <%= type %></a><br>
 </div>
 
 <script>
