--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -29,6 +29,12 @@ input {
     color: #555;
 }
 
+input.small {
+    font-size: 11px;
+    padding: 3px;
+    width: 100px;
+}
+
 input, button {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -85,7 +91,8 @@ button:disabled {
 .options {
     font-size: 18px;
     padding: 9px 0 0 20px;
-
+}
+#extra-options {
 }
 
 .user {
@@ -164,8 +171,9 @@ button:disabled {
     user-select: none;
 }
 
-.filters{}
-.pager{padding:0 0 15px 0;}
+.title {float:left;}
+.filters{float: left;}
+.pager{padding:0 0 15px 0; float: left;}
 .results{}
 .header{}
 
@@ -208,6 +216,15 @@ button:disabled {
 
 .page.selected {
     color: #333;
+}
+
+.big {
+    width: 100%;
+    height: 100px;
+    background-color: #79b6ff;
+    left: 0;
+    top: 80px;
+
 }
 
 .order {
