--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -72,7 +72,7 @@ button:disabled {
 }
 
 .padded {
-        padding:70px 20px 40px 20px;
+        padding:80px 20px 40px 20px;
 
 }
 
@@ -220,7 +220,6 @@ button:disabled {
 
 .big {
     width: 100%;
-    height: 100px;
     background-color: #79b6ff;
     left: 0;
     top: 80px;
@@ -249,7 +248,14 @@ button:disabled {
 
 }
 
-
+.tag {
+    float:left;
+    background-color: #b7e0ff;
+    -webkit-border-radius: 3px;
+    font-size:12px;
+    padding:3px;
+    margin:3px;
+}
 
 
 /* layers */
