--- a/app/views/cms/form.ejs
+++ b/app/views/cms/form.ejs
@@ -4,6 +4,7 @@
 <script src="/js/layers.js"></script>
 <script src="/js/form.js"></script>
 <script src="/js/browse.js"></script>
+<script src="/js/app.js"></script>
 
 <script src="/js/lib/ck/ckeditor.js"></script>
 <script src="/js/lib/codemirror.js"></script>
@@ -31,52 +32,6 @@
         //todo form.delete();
     });
 
-    function form(type) {
-        var ff = new form_form(type);
-        ff.add_listener('browse', function (f, o) {
-            var bb = new browse_browse(o.type);
-            bb.add_listener('select', function (e, r) {
-                add_object(o.field, r);
-            });
-            layers.add_layer(bb);
-        });
-        ff.add_listener('create', function (f, o) {
-            var ff = form(o.type);
-            ff.init();
-            ff.add_listener('close', function (e, r) {
-                add_object(o.field, r);
-            });
-        });
-        ff.add_listener('select', function (f, o) {
-            var ff = form(o.type);
-            ff.init(o.id);
-            ff.add_listener('close', function (e, r) {
-                update_object(o.field, r);
-            });
-        });
-        layers.add_layer(ff);
-        return ff;
-    }
-
-    function add_object(for_field, r)
-    {
-        if (r.created)
-        {
-            for_field.push(r);
-            for_field.emit('change');
-        }
-        layers.pop_layer();
-    }
-
-    function update_object(for_field, r)
-    {
-        if (r.created)
-        {
-            for_field.update(r);
-            for_field.emit('change');
-        }
-        layers.pop_layer();
-    }
 
     $(document).ready(function () {
         $("#workspace").append(layers.$el());
