--- a/app/views/cms/form.ejs
+++ b/app/views/cms/form.ejs
@@ -25,8 +25,7 @@
 <script>
     var layers = new layers_layers();
     var form_stack = [];
-    var root_form = form("<%=type%>");
-    root_form.init(<% if (id) { %>"<%=id%>"<% } %>);
+    var root_form = form("<%=type%>"<% if (id) { %>, "<%=id%>"<% } %>);
     root_form.add_listener('close', function (e, r) {
        confirm('really delete?');
         //todo form.delete();
