--- a/app/views/cms/form.ejs
+++ b/app/views/cms/form.ejs
@@ -1,20 +1,5 @@
 <% include ../head %>
-
-<script src="/js/util.js"></script>
-<script src="/js/layers.js"></script>
-<script src="/js/form.js"></script>
-<script src="/js/browse.js"></script>
-<script src="/js/app.js"></script>
-
-<script src="/js/lib/ck/ckeditor.js"></script>
-<script src="/js/lib/codemirror.js"></script>
-<script src="/js/lib/jquery.fileupload.js"></script>
-<script src="/js/lib/jquery.iframe-transport.js"></script>
-
-<link href="/css/upload.css" rel="stylesheet">
-<link href="/css/codemirror.css" rel="stylesheet">
-
-
+<% include head %>
 <% include ../head1 %>
 <% include ../nav %>
 
